fix(toast): container wraps, buttons aligned to end

--- a/core/src/components/toast/toast.scss
+++ b/core/src/components/toast/toast.scss
@@ -112,7 +112,11 @@
   contain: content;
 }
 
-.toast-content {
+.toast-layout-stacked .toast-container {
+  flex-wrap: wrap;
+}
+
+.toast-layout-inline .toast-content {
   display: flex;
 
   flex: 1;
@@ -132,6 +136,12 @@
 
 .toast-button-group {
   display: flex;
+}
+
+.toast-layout-stacked .toast-button-group {
+  width: 100%;
+
+  justify-content: end;
 }
 
 .toast-button {
